--- a/scss/watch/2014-the-counselor/style.scss
+++ b/scss/watch/2014-the-counselor/style.scss
@@ -19,7 +19,7 @@
 }
 
 .section-last {
-  z-index: 12;
+  z-index: 10;
   position: relative;
 }
 
